--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="T5em9wwaOcvk5z9ilD9TtmZmm0alulgVdNsiqroGqbI" />
     <title>Just For Fun</title>
     <!-- css style -->
     <style>
